# roadsend-php-raven

./: CMakeLists.txt  Doxyfile.rphp  README
c-runtime/: CMakeLists.txt  (+2 more)
compiler/: CMakeLists.txt  pAST.h  pASTVisitors.cpp  pASTVisitors.h  pCompileAndLinkTarget.cpp  pCompileAndLinkTarget.h  pCompileError.cpp  pCompileTarget.cpp  pCompileTarget.h  pCompilerTypes.h  pCreateNode.h  pDriver.cpp  pDriver.h  pGenSupport.cpp  pGenSupport.h  pGenerator.cpp  pGenerator.h  pIRHelper.cpp  pIRHelper.h  pIRTypes.cpp  pIRTypes.h  pInterpretTarget.cpp  pInterpretTarget.h  pLangLexerDef.h  pLangParserDef.h  pLexer.cpp  pLexer.h  pLexers.h  pLibTargets.cpp  pLibTargets.h  pLinkTarget.cpp  pLinkTarget.h  pMemPool.h  pModule.cpp  pModule.h  pParser.cpp  pParser.h  pSourceFile.cpp  pSourceFile.h  pStandAloneTargets.cpp  (+3 more)
compiler/IR/: CMakeLists.txt  pCodeGen.cpp  pCompileAndLinkTarget.cpp  pCompileTarget.cpp  pDeclare.cpp  pDumpTarget.cpp  pGenSupport.cpp  pGenerator.cpp  pIRHelper.cpp  pLibTargets.cpp  pLinkTarget.cpp  pStandAloneTargets.cpp
compiler/JIT/: CMakeLists.txt  pCachedJIT.cpp  pInterpretTarget.cpp  pJIT.cpp  pJITTarget.cpp
compiler/analysis/: CMakeLists.txt  pAST.cpp  pASTVisitors.cpp  pBaseTransformer.cpp  pBaseVisitor.cpp  pDumpVisitor.cpp  pLexer.cpp  pParseContext.cpp  pParser.cpp  pPass.cpp  pPassManager.cpp  pSourceFile.cpp  pSourceModule.cpp
compiler/analysis/grammar_src/: lemon.c  rphp_grammar.y
compiler/analysis/lemon/: lempar.c  rphp_grammar.y
compiler/analysis/lexer/: rphp-lexer-gen.cpp
compiler/analysis/lexer_src/: rphp-lexer-gen.cpp
compiler/analysis/passes/: CheckMemoryManagement.cpp  Desugar.cpp  DumpAST.cpp  DumpStats.cpp  Early_Lower_Loops.cpp  Lower_Binary_Op.cpp  Lower_Conditional_Expr.cpp  Lower_Control_Flow.cpp  MainFunction.cpp  SimplifyStrings.cpp  Split_Builtins.cpp
compiler/driver/: CMakeLists.txt  pCompileAndLinkTarget.cpp  pCompileTarget.cpp  pDriver.cpp  pDumpTarget.cpp  pInterpretTarget.cpp  pLibTargets.cpp  pLinkTarget.cpp  pStandAloneTargets.cpp
compiler/lemon/: lemon.c  rphp_grammar.y
compiler/parser/: main.cpp  php.g  phplexer.cpp  phplexer.h  rphp_ast.h  rphp_debug_visitor.h  rphp_default_visitor.cpp  rphp_default_visitor.h  rphp_parser.cpp  rphp_parser.h  rphp_visitor.cpp  rphp_visitor.h  zendtokenize
frontend/cli/: CMakeLists.txt  main.cpp  rphp-analyzer.cpp  rphp.cpp  rphpi.cpp
frontend/http/: CMakeLists.txt
runtime/: CMakeLists.txt  pClass.cpp  pClassManager.cpp  pClassManager.h  pErrorManager.cpp  pExtBase.cpp  pExtBase.h  pExtManager.cpp  pExtManager.h  pFunction.cpp  pFunction.h  pFunctionManager.cpp  pFunctionManager.h  pFunctionSig.cpp  pHash.cpp  pHash.h  pObject.cpp  pOutputBuffer.cpp  pOutputBuffer.h  pOutputManager.cpp  pOutputManager.h  pResource.cpp  pRuntime.cpp  pRuntime.h  pRuntimeEngine.cpp  pSupport.cpp  pSupport.h  pTypeOperators.cpp  pTypeOperators.h  pTypes.cpp  pTypes.h  pUString.cpp  pUString.h  pVar.cpp  pVar.h  pVarOperators.cpp  rphp_hash.cpp  rphp_hash.h  rphp_object.cpp  rphp_object.h  (+5 more)
runtime/include/: CowPtr.h  pExtBase.h  pExtManager.h  pFunctionManager.h  pFunctionSig.h  pHash.h  pObject.h  pOutputBuffer.h  pOutputManager.h  pResource.h  pRuntime.h  pSupport.h  pTypeOperators.h  pTypes.h  pVar.h  pVarOperators.h
runtime/standard/: pStandardExt.cpp  pStandardExt.h
runtime/test/: CMakeLists.txt  HashTestCase.cpp  HashTestCase.h  functionTestCase.cpp  functionTestCase.h  phashTestCase.cpp  phashTestCase.h  pvarTestCase.cpp  pvarTestCase.h  rphp-pVar-speed.cpp  rphp-pVar-speed.php  rphp-sizes.cpp  runtimeTestCase.cpp  runtimeTestCase.h
sandbox/cpp-exception/: CMakeLists.txt  cpp-call-runtime.cpp  cpp-jit-catcher.cpp  cpp-lib.cpp  cpp-lib.h
tools/kdevelop-pg/: AUTHORS  CMakeLists.txt  TODO
tools/kdevelop-pg/cmake/modules/: CMakeLists.txt  FindKDevelop-PG.cmake
tools/kdevelop-pg/examples/: CMakeLists.txt
tools/kdevelop-pg/examples/cc/: cc.g
tools/kdevelop-pg/examples/cool/: CMakeLists.txt  cool.g  cool_ast.h  cool_default_visitor.cpp  cool_default_visitor.h  cool_io.cpp  cool_lexer.h  cool_lexer.ll  cool_parser.cpp  cool_parser.h  cool_visitor.cpp  cool_visitor.h  decoder.h  main.cpp
tools/kdevelop-pg/examples/cpp/: CMakeLists.txt  cpp_codemodel.cm  cpp_codemodel.cpp  cpp_codemodel.h  cpp_codemodel_fwd.h
tools/kdevelop-pg/include/: CMakeLists.txt  kdev-pg-list.h  kdev-pg-location-table.h  kdev-pg-memory-pool.h  kdev-pg-replacement.h  kdev-pg-token-stream.h
tools/kdevelop-pg/kdev-cmg/: CMakeLists.txt  astyle.h  kdev-cmg-beautifier.cpp  kdev-cmg-beautifier.h  kdev-cmg-chameleon-gen.cpp  kdev-cmg-chameleon-gen.h  kdev-cmg-declarations-gen.cpp  kdev-cmg-declarations-gen.h  kdev-cmg-decoder.cpp  kdev-cmg-decoder.h  kdev-cmg-forward-declarations-gen.cpp  kdev-cmg-forward-declarations-gen.h  kdev-cmg-generate.cpp  kdev-cmg-generate.h  kdev-cmg-implementation-gen.cpp  kdev-cmg-implementation-gen.h  kdev-cmg-initialize-ast.cpp  kdev-cmg-initialize-ast.h  kdev-cmg-io.cpp  kdev-cmg-lexer.ll  kdev-cmg-main.cpp  kdev-cmg-parser.g  kdev-cmg-string-tools.cpp  kdev-cmg-string-tools.h  kdev-cmg-visitor-template.cpp  kdev-cmg-visitor-template.h  kdev-cmg.h
tools/kdevelop-pg/kdev-pg/: ASBeautifier.cpp  ASFormatter.cpp  CMakeLists.txt  kdev-pg-ast-gen.cpp  kdev-pg-ast-gen.h  kdev-pg-ast.h  kdev-pg-beautifier.cpp  kdev-pg-beautifier.h  kdev-pg-checker.cpp  kdev-pg-checker.h  kdev-pg-clone-tree.cpp  kdev-pg-clone-tree.h  kdev-pg-code-gen.cpp  kdev-pg-code-gen.h  kdev-pg-debug-visitor-gen.cpp  kdev-pg-debug-visitor-gen.h  kdev-pg-default-visitor-bits-gen.cpp  kdev-pg-default-visitor-bits-gen.h  kdev-pg-default-visitor-gen.cpp  kdev-pg-default-visitor-gen.h  kdev-pg-default-visitor.cpp  kdev-pg-default-visitor.h  kdev-pg-environment.h  kdev-pg-first.cpp  kdev-pg-first.h  kdev-pg-follow.cpp  kdev-pg-follow.h  kdev-pg-generate.cpp  kdev-pg-generate.h  kdev-pg-global.cpp  kdev-pg-lexer.cc  kdev-pg-lexer.ll  kdev-pg-main.cpp  kdev-pg-parser.cc  kdev-pg-parser.hh  kdev-pg-parser.yy  kdev-pg-pretty-printer.cpp  kdev-pg-pretty-printer.h  kdev-pg-serialize-visitor-gen.cpp  kdev-pg-serialize-visitor-gen.h  (+8 more)
(+159 files in other folders)
